--- a/templates/delete_post.html
+++ b/templates/delete_post.html
@@ -5,7 +5,7 @@
 {% block title %}Post {% endblock title %}
 {% block content %}
 
-<h1>Add new post</h1>
+<h1>Are you sure you want to delete post?</h1>
 {% for user in All.users %}
 {{ All.users }}
 
