--- a/templates/iqroom.html
+++ b/templates/iqroom.html
@@ -3,7 +3,7 @@
 {% block title%} Create Post {% endblock title %}
 {% block content %}
 
-
+<h3>IQRoom</h3>
 
 <form action="/showform/" method="POST">
 
