--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
     <title>{% block title %} InQuireMe {% endblock title %}</title>
 </head>
 
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg ">
     <div class="container-fluid">
         <a class="nav-link" aria-current="page" href="#">InQuireMe<img src="https://img.icons8.com/ios-filled/50/000000/ask-question.png"/></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -50,12 +50,11 @@
       </div>
   </nav>
   
-<body>
 
 
      <div class = "container">
     {% block content %}
-    <h1>Welcome to InQuireMe!</h1>
+    <h3>Welcome to InQuireMe!</h3>
    
     {% endblock content %}
     
@@ -64,6 +63,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" 
 integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" 
 crossorigin="anonymous"></script>
-</body>
+
 
 </html>
