--- a/templates/feed.html
+++ b/templates/feed.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
-
+<body class=contain-white>
 {% block title %}{{ post_list.title }}{% endblock title %}
 {% block content %}
-
+    <h3>IQFeed</h3>
     <ul>
     {% for post in post_list %}
     
@@ -24,5 +24,5 @@
     
     {% endif %}
     </div> -->
-
+</body>
 {% endblock content %}
