--- a/templates/registrations/login.html
+++ b/templates/registrations/login.html
@@ -2,7 +2,7 @@
 
 {% block title %}InQuireMe - Login {% endblock title %}
 {% block content %}
-
+<div class=contain-white>
 <h2>Log In</h2>
 <form method="post">
   <form>
@@ -25,7 +25,7 @@
  
     <button type="submit">Log In</button>
   </form>
-
+</div>
 
 
 
