--- a/templates/search.html
+++ b/templates/search.html
@@ -4,7 +4,7 @@
       <section class="hero is-primary mb-4">
         <div class="hero-body">
           <p class="title">
-            SuperHero FAQ
+           Search
           </p>
           <p class="subtitle">
       Frequently Asked Question about Superhero
