--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,15 @@
 
     <title>{% block title %} InQuireMe {% endblock title %}</title>
 </head>
+<!DOCTYPE html>
+<html>
+    
+<head>
+    <title>Home</title>
+</head>
+    
+<body>
+
 
   <nav class="navbar navbar-expand-lg ">
     <div class="container-fluid">
@@ -22,7 +31,7 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="{% url 'homepage' %}">Home</a>
+                <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'iqfeed'%}">IQFeed</a>
@@ -49,7 +58,7 @@
           </div>
       </div>
   </nav>
-  
+
 
 
      <div class = "container">
@@ -57,7 +66,9 @@
     <h3>Welcome to InQuireMe!</h3>
    
     {% endblock content %}
-    
+   
+    </p>
+
     </div>
 <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" 
