--- a/templates/registration/signuppro.html
+++ b/templates/registration/signuppro.html
@@ -17,11 +17,11 @@
 
 </table>
 
-<form type = 'post' enctype ="multipart/form-data">
+<!-- <form type = 'post' enctype ="multipart/form-data">
     {% csrf_token %}
     {{form}}
     <input type="submit" value = "Submit">
-</form>
+</form> -->
 
 </body>
 
