--- a/templates/base.html
+++ b/templates/base.html
@@ -8,22 +8,24 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" 
     rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" 
     crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static 'css/base.css' %}">
-
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" 
+    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"> 
+    <link rel="stylesheet" href="{% static 'css/base.css' %}"> 
     <title>{% block title %} InQuireMe {% endblock title %}</title>
 </head>
-<!DOCTYPE html>
-<html>
+
     
-<head>
-    <title>Home</title>
-</head>
+
+
+
     
 <body>
+ 
 
 
   <nav class="navbar navbar-expand-lg ">
     <div class="container-fluid">
+      
         <a class="nav-link" aria-current="page" href="#">InQuireMe<img src="https://img.icons8.com/ios-filled/50/000000/ask-question.png"/></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -34,46 +36,273 @@
                 <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'iqfeed'%}">IQFeed</a>
+                <a class="nav-link" href="{% url 'feed' %}">IQFeed</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'iqroom'%}">IQRoom</a>
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'new'%}">Create Post</a>
-    
-
               </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="{% url 'new' %}">Create Post</a>
+            </li>
+        
+
               <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  <a class="nav-link dropdown-toggle"  id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Sign Up
                   </a>
                   <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                  <li><a class="dropdown-item" href="{% url 'signuppro' %}">Pro Account</a></li>
-                  <li><a class="dropdown-item" href="{% url 'signup' %}">Standard Account</a></li>
+                  
+                  <li><a class="dropdown-item" href="{% url 'signup' %}">Register</a></li>
                   <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="{% url 'login' %}">Log In</a></li>
+                  <li><a class="dropdown-item" href="{% url 'login' %}">Login</a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item" href="{% url 'logout' %}">Logout</a></li>
                   </ul>
               </li>
               </ul>
           </div>
       </div>
-  </nav>
+  </nav> 
 
 
 
      <div class = "container">
+    
+
     {% block content %}
-    <h3>Welcome to InQuireMe!</h3>
+{% if user.is_authenticated %}
+  Your are logged in {{ user.username }}!
+  <p><a href="{% url 'logout' %}">Log Out</a></p>
+{% else %}
+  <p>You are not logged in</p>
+  <a href="{% url 'login' %}">Log In</a> |
+  <a href="{% url 'signup' %}">Sign Up</a>
+{% endif %}
+
+
+     </div>
+
+
+
+
+
+    <h3><center>Welcome to InQuireMe</h3></center>
+  
+
+
+    <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="col">
+          <div class="card h-100"> 
+             <img src="{% static 'img/automotive.jpg' %}" class="card-img-top" alt="automatic">
+            
+            <div class="card-body">
+              
+              <h5 class="card-title"><a link href= 'http://127.0.0.1:8000/category/Automotive/'>Automotive</a></a></h5><br>
+              <p class="card-text"></p>
+            </div>
+          </div>
+        </div>
+        
    
-    {% endblock content %}
-   
-    </p>
+
+      <div class="col">
+        <div class="card h-100"> 
+           <img src="{% static 'img/beauty.jpg' %}" class="card-img-top" alt="beauty">
+          
+          <div class="card-body">
+            <h5 class="card-title"><a link href= 'http://127.0.0.1:8000/category/Beauty/'>Beauty</a></a></h5><br>
+            <p class="card-text"></p>
+          </div>
+        </div>
+      </div>
+      
+
+  
+
+    <div class="col">
+      <div class="card h-100"> 
+         <img src="{% static 'img/businesspic.jpg' %}" class="card-img-top" alt="business">
+        
+        <div class="card-body">
+          
+          <h5 class="card-title"><a link href= 'http://127.0.0.1:8000/category/Business/'>Business</a></a></h5><br>
+          <p class="card-text"></p>
+        </div>
+      </div>
+    </div>
+    
+
+
+  <div class="col">
+    <div class="card h-100"> 
+       <img src="{% static 'img/engineering.jpg' %}" class="card-img-top" alt="engineering">
+      
+      <div class="card-body">
+        
+        <h5 class="card-title"><a link href= 'http://127.0.0.1:8000/category/Engineering/'>Engineering</a></a></h5><br>
+        <p class="card-text"></p>
+      </div>
+    </div>
+  </div>
+  
+
+
+  <div class="col">
+    <div class="card h-100"> 
+       <img src="{% static 'img/theater.jpg' %}" class="card-img-top" alt="entertainment">
+      
+      <div class="card-body">
+        
+        <h5 class="card-title"><a link href= 'http://127.0.0.1:8000/category/Entertainment/'>Entertainment</a></a></h5><br>
+        <p class="card-text"></p>
+      </div>
+    </div>
+  </div>
+  
+
+
+
+  <div class="col">
+    <div class="card h-100"> 
+       <img src="{% static 'img/financial.jpg' %}" class="card-img-top" alt="financial">
+      
+      <div class="card-body">
+        
+        <h5 class="card-title"><a link href= 'http://127.0.0.1:8000/category/Financial/'>Financial</a></a></h5><br>
+        <p class="card-text"></p>
+      </div>
+    </div>
+  </div>
+  
+
+
+
+  <div class="col">
+    <div class="card h-100"> 
+       <img src="{% static 'img/health.jpg' %}" class="card-img-top" alt="health">
+      
+      <div class="card-body">
+        
+        <h5 class="card-title"><a link href= 'http://127.0.0.1:8000/category/Health/'>Health</a></a></h5><br>
+        <p class="card-text"></p>
+      </div>
+    </div>
+  </div>
+  
+
+
+
+  <div class="col">
+    <div class="card h-100"> 
+       <img src="{% static 'img/history.jpg' %}" class="card-img-top" alt="history">
+      
+      <div class="card-body">
+        
+        <h5 class="card-title"><a link href= 'http://127.0.0.1:8000/category/History/'>History</a></a></h5><br>
+        <p class="card-text"></p>
+      </div>
+    </div>
+  </div>
+  
+
+
+  <div class="col">
+    <div class="card h-100"> 
+       <img src="{% static 'img/language.jpg' %}" class="card-img-top" alt="language">
+      
+      <div class="card-body">
+        
+        <h5 class="card-title"><a link href= 'http://127.0.0.1:8000/category/Language/'>Language</a></a></h5><br>
+        <p class="card-text"></p>
+      </div>
+    </div>
+  </div>
+  
+
+
+
+  <div class="col">
+    <div class="card h-100"> 
+       <img src="{% static 'img/politics.jpg' %}" class="card-img-top" alt="construction">
+      
+      <div class="card-body">
+        
+        <h5 class="card-title"><a link href= 'http://127.0.0.1:8000/category/Politics/'>Politics</a></a></h5><br>
+        <p class="card-text"></p>
+      </div>
+    </div>
+  </div>
+  
+
+
+  <div class="col">
+    <div class="card h-100"> 
+       <img src="{% static 'img/programming.jpg' %}" class="card-img-top" alt="programming">
+      
+      <div class="card-body">
+        
+        <h5 class="card-title"><a link href= 'http://127.0.0.1:8000/category/Programming/'>Programming</a></a></h5><br>
+        <p class="card-text"></p>
+      </div>
+    </div>
+  </div>
+  
+
+
+
+  <div class="col">
+    <div class="card h-100"> 
+       <img src="{% static 'img/psychology.jpg' %}" class="card-img-top" alt="construction">
+      
+      <div class="card-body">
+        
+        <h5 class="card-title"><a link href= 'http://127.0.0.1:8000/category/Psychology/'>Psychology</a></a></h5><br>
+        <p class="card-text"></p>
+      </div>
+    </div>
+  </div>
+  
+
+
+
+  <div class="col">
+    <div class="card h-100"> 
+       <img src="{% static 'img/residential construction.jpg' %}" class="card-img-top" alt="residential construction">
+      
+      <div class="card-body">
+        
+        <h5 class="card-title"><a link href= 'http://127.0.0.1:8000/category/Residential%20Construction/'>Residential Construction</a></a></h5><br>
+        <p class="card-text"></p>
+      </div>
+    </div>
+  </div>
+  
+
+
+  <div class="col">
+    <div class="card h-100"> 
+       <img src="{% static 'img/science.jpg' %}" class="card-img-top" alt="science">
+      
+      <div class="card-body">
+        
+        <h5 class="card-title"><a link href= 'http://127.0.0.1:8000/category/Science/'>Science</a></a></h5><br>
+        <p class="card-text"></p>
+      </div>
+    </div>
+  </div>
+  
+    </div>
+
+
 
     </div>
-<!-- JavaScript Bundle with Popper -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" 
+    
+    {% endblock content %}
+
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" 
 integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" 
-crossorigin="anonymous"></script>
+crossorigin="anonymous"></script> 
 
 
 </html>
+</body>
