--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,30 +1,85 @@
 {% extends 'base.html' %}
-
-
-
-
-
-
-
-
-{% block title %}login{% endblock title %}
-{% block content %}
-
-<h3>login</h3>
-
-<form method="POST">
-
-    {% csrf_token %}
-    {{ form }}
+{% load static %}
+{% load crispy_forms_tags %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" 
+    rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" 
+    crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'css/login.css' %}">
     
-<button class="button" type="submit">Submit</button>
+    
+   
+    {% block title %}Login {% endblock title %}
+    {% block content %}
+
+    <a href="{% url 'signup' %}">Signup</a><br>
+    
+   
+    <p>Giving you professional advice for the questions<br>
+    you really dont know the answer to.</p>
+</div>
+  
+
+
+  
+  
+
+
+
+{% if error %}
+<p><strong>Invalid email or password.</strong></p>
+{% endif %}
+<h2>Log In</h2>
+
+
+
+
+
+<div class= "offset-2 col-md-6">
+  <form method="POST">
+       {% csrf_token %}
+       {{ form|crispy }}
+  <button type="submit">Log In</button>
 </form>
 
 
+<!-- <script>
+  function hideshow (){
+   $(document).ready(function () { //function will wait for the page to fully load before executing
+
+        $("input[type=select][name=flag]").change(function () { //specifying onchange function for input of type radio and name visibility
+            console.log("Change!")
+            if (this.value == "Standard Account") { //if the new value is private
+                $("Category_verified").prop('disabled', true);//would recommend readonly instead of disable for form integrity
+                console.log("Disabling");
 
 
+            }else{this.value == "Pro Account"
+                    $("Category_verified").prop('disabled', false);
+                    console.log("Enabling");
+                }
+        });
+    });
+  }
+</script> -->
+
+
+
+  
+    
+
+  
+
+</body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" 
+integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" 
+crossorigin="anonymous"></script>
  
 
-
-
-{% endblock content %}
+{% endblock %}
+</html> 
