--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -1,22 +1,83 @@
 {% extends 'base.html' %}
-
-<body class= contain-grey>
+{% load static %}
+{% load crispy_forms_tags %}
+<head>
+<!-- 
+<script src="js/jquery-3.1.1.min.js"></script> -->
+<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
+<script src="{% static '/js/signin.js' %}" type="text/javascript"></script>
+</head>
 
 {% block title %}InQuireMe - Signup {% endblock title %}
 {% block content %}
 
-<h3>Standard Account Signup</h3>
-<table>
+<h3>Standard Account Signup</h3><br>
+
+<h6>Consider signing up with a Pro account. <br>
+     With a Pro account users can answer questions in categories they're verified in!</h6>
+
+<div class= "offset-2 col-md-6">
 <form method="POST">
+     {% csrf_token %}
+     {{ form|crispy }}
+  
 
-    {% csrf_token %}
-    {{ form.as_table }}
-    
-<button class="button" type="submit">Submit</button>
-</form>
-</table>
+<button class="button" type="submit">SignUp</button>
+</div>
+</form> 
 
+<div class="mb-3">
+     <label for="formFileSm" class="form-label">Small file input example</label>
+     <input class="form-control form-control-sm" id="formFileSm" type="file">
+   </div>
+</div> 
+<script type="text/javascript">
+alert('hi!');
+
+
+// Javascript to register change to either standard or pro account and hide 
+// fields not required for a standard account(categories_verified, file upload)
+
+// function show() {
+// $('[name="flag"]').on('change'(function () {
+//     var end = this.value;
+//     if (end == '1'){
+//         $('[name="categories_verified"]').show();
+//     }
+//     else {
+//         $('[name="categories_verified"]').hide();
+//     }
+// }))};
+
+
+//  $('#id_flag').on('change'. function () {
+//      var optionSelected = $("option:selected", this)
+//      var valueSelected = this.value;
+
+//      if (valueSelected === 1){
+//           $('#id_categories_verified').hide();
+//      } else {
+//          $('#id_categories_verified').show();
+//      }
+// });
+// function show() {
+//      if(document.getElementById('#id_flag').value == "1") {
+//      document.getElementById('#id_categories_verified').hide();
+//      } else {
+//      document.getElementById('#id_categories_verified').show();
+//      }};
+
+//       if(document.SignUpForm.Flag.options[document.SignUpForm.Flag.selectedIndex].value == '0'){
+//         document.getElementById('category_verified').style.display='none';
+//     }
+//       else
+//         {document.getElementById('category_verified').style.display='block';}
+//     }
+
+
+</script>
+
+
+<a href="{% url 'login' %}">Login</a>
 </body>
-
-
 {% endblock content %}   
